syntax = "proto3";

package ai.schreuder.dopamine.requests;

message CreateAccountRequest {
  string authenticationId = 1;
  string handle = 2;
}